--- a/css/style.css
+++ b/css/style.css
@@ -66,15 +66,109 @@ header {
 }
 
 #top {
-    padding: 0px 50px;
+    margin: 0px 60px;
+    flex-direction: column;
+    height: 250px;
+    justify-content: space-between;
 }
 
-.elem_top {
-    width: 100%;
+#title_top {
+    font-size: 150%;
+    font-weight: bold;
 }
 
-.elem_filter {
-    margin: 20px;
+#search {
+    height: 50px;
+    font-size: 120%;
+    font-weight: bold;
+    width: 30%;
+    margin: 15px 0px 0px 20px;
+    border: #F2F2F2 solid 1px;
+    border-radius: 15px;
+    flex-direction: row;
+}
+
+.search_icon {
+    width: 50px;
+    background-color: #f2f2f2;
+    border-radius: 15px 0px 0px 15px;
+    margin: -1px 0px -1px -1px;
+}
+
+#city {
+    height: 50px;
+    flex: 1;
+    align-items: center;
+    padding-left: 20px;
+    margin: -1px 0px;
+}
+
+button {
+    height: 50px;
+    border-radius: 0px 15px 15px 0px;
+    padding: 0px 12px;
+    margin: -1px -1px -1px 0px;
+    justify-content: center;
+    align-items: center;
+    background-color: #0065FC;
+    color: white;
+}
+
+.fa-location-arrow {
+    display: block;
+    margin: auto;
+}
+
+#filters {
+    height: 50px;
+    font-size: 120%;
+    font-weight: bold;
+    padding-left: 20px;
+    justify-content: space-between;
+    align-items: center;
+    width: 66%;
+}
+
+.filter {
+    border: solid #c2c2c2 2px;
+    height: 46px;
+    border-radius: 23px;
+    align-items: center;
+    padding-right: 15px;
+}
+
+.filter_icon {
+    background-color: #DEEBFF;
+    color: #0065FC;
+    height: 46px;
+    width: 46px;
+    border-radius: 23px;
+    margin: -2px 10px -2px -3px;
+}
+
+.filter_icon .fas {
+    margin: auto;
+}
+
+#info {
+    height: 26px;
+}
+
+.info_icon {
+    color:#0065FC;
+    border: solid #c2c2c2 1px;
+    width: 26px;
+    height: 26px;
+    border-radius: 13px;
+}
+
+.info_text {
+    margin: auto 0px auto 20px;
+}
+
+.fa-info {
+    display: block;
+    margin: auto;
 }
 
 .titre_section {
@@ -103,7 +197,7 @@ header {
 .hebergement {
     border-radius: 30px;
     background-color: white;
-    box-shadow: 5px 5px 5px #929292;
+    box-shadow: 5px 5px 5px #c2c2c2;
     width: 30.5%;
     height: 250px;
     overflow: hidden;
@@ -165,7 +259,7 @@ strong {
 .populaire {
     border-radius: 30px;
     background-color: white;
-    box-shadow: 5px 5px 5px #929292;
+    box-shadow: 5px 5px 5px #c2c2c2;
     width: 95%;
     height: 180px;
     overflow: hidden;
@@ -205,7 +299,7 @@ strong {
 .activite {
     border-radius: 30px;
     background-color: white;
-    box-shadow: 5px 5px 5px #929292;
+    box-shadow: 5px 5px 5px #c2c2c2;
     width: 100%;
     height: 270px;
     overflow: hidden;
