--- a/css/style.css
+++ b/css/style.css
@@ -405,10 +405,10 @@ footer {
 @media screen and (max-width: 992px) {
 
     header {
-        margin: 0px 0px 0px -10px;
+        margin: 0px;
         padding: 10px 0px 0px 0px;
         flex-direction: row;
-        width: calc(100% + 20px);
+        width: 100%;
         height: 150px;
     }
 
@@ -460,12 +460,13 @@ footer {
     }
 
     #search {
-        width: 100px;
+        width: calc(100% - 20px);
         margin: 0px;
+        flex-wrap: nowrap;
     }
 
     form {
-        width: calc(100% - 50px);
+        flex-wrap: nowrap;
     }
 }
 
